# push_swap

./: .gitignore  CMakeLists.txt  Makefile  README.md
includes/: push_swap.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  (+4 more)
src/: long_sort.c  main.c  short_sort.c  sort_array.c
src/algo_utils/: exit.c  is_sorted.c  search.c
src/checker_bonus/: checker.c  cmd_reader.c  commands_c.c  correct_enter.c  get_next_line.c  gnl_utils.c
src/lst_utils/: commands.c  free_list.c  new_node.c
src/parse_string/: string_utils.c
